# CPP-Math-Library

./: .gitignore  CMakeLists.txt  README.md
include/: activation.h  layer.h  linearRegression.h  logisticRegression.h  loss.h  matrix.h  neural_network.h  vector.h
numpy_clone/: CMakeLists.txt
numpy_clone/include/: array.h  utils.h
numpy_clone/tests/: main.cpp
src/: activation.cpp  layer.cpp  linearRegression.cpp  logisticRegression.cpp  loss.cpp  matrix.cpp  neural_network.cpp  vector.cpp
tests/: activation_test.cpp  layer_test.cpp  linearRegression_test.cpp  logisticRegression_test.cpp  matrix_test.cpp  neural_network_test.cpp  vector_test.cpp
